07122013 -> jonnyboy -> nzb-import and grabNZBs now use site edit Crosspost time
						fixed a bug when switch nntp provider and groups not available or invalid first_post
07112013 -> jonnyboy -> tmux -added option to use removecrapreleases all or just 1 setting
						fixed bug in postprocess_threaded.py
07112013 -> jonnyboy -> added 3 loop limit to releases stage4567
						updated nntplib.py, fixed a bug when switch nntp provider and groups not available
						fixed bug in tmux-seq when not running any backfill
						fixed bug in postback, when reconnecting to nntp, need to set group name first
07112013 -> kevin    -> added the new regexes to namecleaning releaseCleaner, removed the "universal" one from the groups.
						changed the group regexes in releaseCleaner to make sure they don't match on other groups.
						make sure exe doesn't get into tv.
						Added alt.binaries.multimedia.anime to releaseCleaner.
						Changed collectionsCleaner so in the future it can do groups.
07112013 -> jonnyboy -> added 'trim' to releases name in nzb-import and grabNZBs
						fixed bug in postprocess.php
						beginning the move of pre/requestID matching to release creation, instead of separate process later
07102013 -> jonnyboy -> fixed bug in backfill causing some issue with nntp stall
						moved python lib files
07092013 -> jonnyboy -> added limit clause when running populate gids from tmux
						added query to grabnzbs that appear incomplete but are older than 2 hours
						fixed bug in grabznbs creating gid at same time as update_releases
						changed poster to fromname delete_releases.php
						added nzbstatus check for gid creation
						added db connect string to start of loop in monitor.php, should help the with disabled by running issues
						updated start.php to latest patch
07072013 -> jonnyboy -> added update_relases run when have exceeded limits in seq