@@ -17,6 +17,8 @@ import lib.info as info
 import signal
 import datetime
 
+print("\nUpdate Binaries Threaded Started at %s" % (datetime.datetime.now().strftime("%H:%M:%S")))
+
 start_time = time.time()
 pathname = os.path.abspath(os.path.dirname(sys.argv[0]))
 conf = info.readConfig()
@@ -35,7 +37,6 @@ if len(datas) == 0:
 #get threads for update_binaries
 cur.execute("select value from site where setting = 'binarythreads'")
 run_threads = cur.fetchone()
-
 
 #close connection to mysql
 cur.close()
@@ -69,6 +70,9 @@ def main():
 	global time_of_last_run
 	time_of_last_run = time.time()
 
+	print("We will be using a max of %s threads, a queue of %s groups" % (run_threads[0], "{:,}".format(len(datas))))
+	time.sleep(2)
+
 	def signal_handler(signal, frame):
 		sys.exit(0)
 
@@ -80,8 +84,6 @@ def main():
 			p = queue_runner(my_queue)
 			#p.setDaemon(False)
 			p.start()
-
-	print("\nUpdate Binaries Threaded Started at %s" % (datetime.datetime.now().strftime("%H:%M:%S")))
 
 	#now load some arbitrary jobs into the queue
 	for gnames in datas:
