@@ -328,7 +328,7 @@ class PostProcess
 			else
 			{
 				$result = 0;
-				$pieces = explode("                       ", $releaseToWork);
+				$pieces = explode("           =+=            ", $releaseToWork);
 				$result = array(array('ID' => $pieces[0], 'guid' => $pieces[1], 'name' => $pieces[2], 'disablepreview' => $pieces[3], 'size' => $pieces[4], 'groupID' => $pieces[5], 'nfostatus' => $pieces[6]));
 			}
 		}
@@ -573,6 +573,21 @@ class PostProcess
 							$bingroup = $groupName;
 							$connect;
 							$fetchedBinary = $nntp->getMessages($bingroup, $mid);
+							if (PEAR::isError($fetchedBinary))
+							{
+								$nntp->doQuit();
+								unset($nntp);
+								$nntp = new Nntp;
+								$connect;
+								$data = $nntp->selectGroup($groupName);
+								$fetchedBinary = $nntp->getMessages($bingroup, $mid);
+								if (PEAR::isError($fetchedBinary))
+								{
+									echo $n.$n."Error {$fetchedBinary->code}: {$fetchedBinary->message}".$n.$n;
+								return;
+								}
+							}
+
 							if ($this->echooutput)
 								echo " b";
 
@@ -706,6 +721,20 @@ class PostProcess
 				{
 					$connect;
 					$sampleBinary = $nntp->getMessages($samplegroup, $samplemsgid);
+					if (PEAR::isError($sampleBinary))
+					{
+						$nntp->doQuit();
+						unset($nntp);
+						$nntp = new Nntp;
+						$connect;
+						$data = $nntp->selectGroup($groupName);
+						$sampleBinary = $nntp->getMessages($bingroup, $mid);
+						if (PEAR::isError($sampleBinary))
+						{
+							echo $n.$n."Error {$sampleBinary->code}: {$sampleBinary->message}".$n.$n;
+							return;
+						}
+					}
 					if ($this->echooutput)
 						echo " s";
 					if ($sampleBinary !== false)
@@ -726,6 +755,20 @@ class PostProcess
 				{
 					$connect;
 					$mediaBinary = $nntp->getMessages($mediagroup, $mediamsgid);
+					if (PEAR::isError($mediaBinary))
+					{
+						$nntp->doQuit();
+						unset($nntp);
+						$nntp = new Nntp;
+						$connect;
+						$data = $nntp->selectGroup($groupName);
+						$mediaBinary = $nntp->getMessages($bingroup, $mid);
+						if (PEAR::isError($mediaBinary))
+						{
+							echo $n.$n."Error {$mediaBinary->code}: {$mediaBinary->message}".$n.$n;
+							return;
+						}
+					}
 					if ($this->echooutput)
 						echo " m";
 					if ($mediaBinary !== false)
@@ -752,6 +795,20 @@ class PostProcess
 				{
 					$connect;
 					$audioBinary = $nntp->getMessages($audiogroup, $audiomsgid);
+					if (PEAR::isError($audioBinary))
+					{
+						$nntp->doQuit();
+						unset($nntp);
+						$nntp = new Nntp;
+						$connect;
+						$data = $nntp->selectGroup($groupName);
+						$audioBinary = $nntp->getMessages($bingroup, $mid);
+						if (PEAR::isError($audioBinary))
+						{
+							echo $n.$n."Error {$audioBinary->code}: {$audioBinary->message}".$n.$n;
+							return;
+						}
+					}
 					if ($this->echooutput)
 						echo " a";
 					if ($audioBinary !== false)
@@ -770,6 +827,20 @@ class PostProcess
 				{
 					$connect;
 					$jpgBinary = $nntp->getMessages($jpggroup, $jpgmsgid);
+					if (PEAR::isError($jpgBinary))
+					{
+						$nntp->doQuit();
+						unset($nntp);
+						$nntp = new Nntp;
+						$connect;
+						$data = $nntp->selectGroup($groupName);
+						$jpgBinary = $nntp->getMessages($bingroup, $mid);
+						if (PEAR::isError($jpgBinary))
+						{
+							echo $n.$n."Error {$jpgBinary->code}: {$jpgBinary->message}".$n.$n;
+							return;
+						}
+					}
 					if ($this->echooutput)
 						echo " j";
 					if ($jpgBinary !== false)
